# Ground-Station-and-Payload-2025

./: .gitignore  .gitmodules  Cargo.toml  README.md  linux_build.sh
desktop-test/: 2025-05-01_17-44-02.csv  2025-05-01_17-51-55.csv  2025-05-01_17-52-27.csv  2025-05-01_17-53-30.csv  2025-05-01_17-59-07.csv  2025-05-01_18-00-13.csv  2025-05-20_15-31-10.csv  2025-05-20_15-31-26.csv  2025-05-20_16-18-11.csv  Cargo.toml
desktop-test/src/: main.rs
esp32/: Cargo.toml  build.rs
esp32/.cargo/: config.toml
esp32/src/: lib.rs
esp32/src/old/: ground_station.rs
esp32/src/protocol/: mod.rs
esp32/src/unused/: _old.rs
esp32s3/: Cargo.toml  README.md  build.rs
esp32s3/.cargo/: config.toml
esp32s3/src/: data.pb.swift  data.proto
esp32s3/src/old/: ground_station.rs  ui_test.rs
esp8285/: platformio.ini
esp8285/include/: LowPassFilter.h
esp8285/src/: main.cpp
freeRTOS-payload/: CMakeLists.txt
freeRTOS-payload/src/: CMakeLists.txt  hello_freertos.c  main.c
ground-station/: CMakeLists.txt  Counter.cpp  Counter.h  GroundStation.pro  Main.qml  README.md  main.cpp  mainwindow.ui
ground-station/web/: index.html
ground_station/: README.md  package.json  svelte.config.js  tailwind.config.ts
ground_station/src/: app.css  app.html
ground_station/src-tauri/: Cargo.toml  tauri.conf.json
ground_station/src-tauri/icons/: icon.icns
ground_station/src-tauri/src/: lib.rs  main.rs
ground_station/src/lib/: stores.ts
ground_station/src/lib/components/: BottomBar.svelte  Charts.svelte  Map.svelte  RocketVisualization.svelte  SerialData.svelte
ground_station/src/routes/: +page.svelte
ground_station/src/routes/dash/: +page.svelte
ground_station/src/routes/radio/: +page.svelte
ground_station/src/routes/test/: +page.svelte
ground_station/static/models/rocket-model/: README.md  Rocket.glb  Rocket.mtl
ground_station_2/: Cargo.toml  LICENSE  README.md
ground_station_2/logs/: app.log.2025-05-20
ground_station_2/src/: main.rs
libs/ADXL375/: Cargo.toml  README.md
libs/ADXL375/src/: lib.rs  registers.rs
libs/Controls/: Cargo.toml  README.md
libs/Controls/src/: ekf.rs  lib.rs  pid.rs
libs/ISM330DHCX/examples/stm32l433/: Cargo.toml
libs/ISM330DHCX/src/: lib.rs
libs/Mesh/: Cargo.toml
libs/Mesh/src/protocol/: aprs.rs  mod.rs
libs/UBLOX-rs/: Cargo.toml
libs/UBLOX-rs/src/: lib.rs
old/ground-station/: .gitignore  Counter.h  MainWindow.cpp  TestFunction.h  main.cpp  mainwindow.h  qml.qrc
old/payload/.cache/clangd/index/: AlignedBox.h.3850FEC4A4979FED.idx  AngleAxis.h.6043EA7A703ED6A1.idx  ArithmeticSequence.h.6BEFD8E9B223AAB2.idx  Array.h.A42F02748C57CC2F.idx  ArrayBase.h.697F1E43FDF87C20.idx  ArrayCwiseBinaryOps.inc.73CC0D999AB37EC6.idx  ArrayCwiseUnaryOps.inc.15F75A0A92D96458.idx  ArrayWrapper.h.6EF6750ECEA401A8.idx  Assert.h.C89E0B9DD244457B.idx  Assign.h.757C529A215FE58A.idx  AssignEvaluator.h.591DAA8EAB60A0F0.idx  AssignmentFunctors.h.2F2D5B4B9A941BF9.idx  BDCSVD.h.F225881F7BD05C1F.idx  BFloat16.h.DB02449956710D0E.idx  BandMatrix.h.3CDC5043315A061B.idx  BinaryFunctors.h.AF1B20CE0096BE4C.idx  BlasUtil.h.8E7C4D6DF26D6405.idx  Block.h.AE7BDD8D904348FB.idx  BlockHouseholder.h.5A27CBEE7C2C278B.idx  BlockMethods.inc.072EF9FCCF2DE74A.idx  Cholesky.056234305835513D.idx  ColPivHouseholderQR.h.4CCE6C78E5EC8471.idx  CommaInitializer.h.F558EB4F3EEC9A6E.idx  CommonCwiseBinaryOps.inc.60A91A27ABDABF9D.idx  CommonCwiseUnaryOps.inc.A0F0BE48EEE73756.idx  CompleteOrthogonalDecomposition.h.56F0186546B0349A.idx  ComplexEigenSolver.h.0086724F5CBD70C6.idx  ComplexSchur.h.0DD4F563369E9789.idx  ConditionEstimator.h.485A34514BE9A8FF.idx  ConfigureVectorization.h.2FECBCF1AC5DE1AB.idx  ConjHelper.h.5372D02678CB3BD7.idx  Constants.h.030D277FC3A0C57F.idx  Core.63CCE8F02C396EDA.idx  CoreEvaluators.h.F609B2C384F541C0.idx  CoreIterators.h.CE23552363FA1920.idx  CwiseBinaryOp.h.6F734F6373E5263B.idx  CwiseNullaryOp.h.9B819F45750CDB6F.idx  CwiseTernaryOp.h.052860539D7CD304.idx  CwiseUnaryOp.h.F64EB9504F863004.idx  CwiseUnaryView.h.EE6F313910C3DD5B.idx  (+454 more)
old/payload/include/GPS/NMEA/: gps_helper.h  sensor_gps.h
old/payload/src/: altimeter.cpp  kalman_filter.cpp  pwm.cpp  spi_flash.c
old/payload/tools/: CMakeLists.txt  gps_test.cpp  uart_usb_ftdi_cable.cpp
old/payload/tools/GPS/: gps_helper.cpp  rtcm.cpp
payload/: .gitignore  CMakeLists.txt
payload/include/GPS/NMEA/: crc.h  nmea.h  rtcm.h
payload/src/: CMakeLists.txt  active_drag_system.cpp  imu.cpp
payload/tools/: CMakeLists.txt  gps_test.cpp  hello_world.cpp  imu_calib.cpp
payload/tools/GPS/: crc.cpp
pico/: .gitmodules  Cargo.toml  rust-toolchain.toml
pico/.cargo/: config.toml
pico/src/old/: bmp390_test.rs  ism330_test.rs  mavlink_test.rs  uart_unidir.rs  wifi_blinky.rs
rust/esp32s3/.cargo/: config.toml
rust/esp32s3/src/old/: hello_world.rs  lily_test.rs  lora_rx_test.rs  lora_tx_test.rs
rust/pico/: Cargo.toml
rust/pico/src/old/: hello_world.rs
stm32h755cm7/: Cargo.toml
