[package]
name = "esp32-rust-test"
version = "0.1.0"
authors = ["Gregory Wainer <greg.wainer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

defmt = { version = "0.3" }
bytemuck = { version = "1.21", features = ["derive"] }

embassy-executor    = { version = "0.7", features = ["task-arena-size-12288"] }
embassy-futures = "0.1"
embassy-sync        = "0.6"
embassy-time        = { version = "0.4" , features = ["generic-queue-8"] }
embassy-usb         = { version = "0.4", default-features = false }
embassy-embedded-hal = "0.3"
embedded-hal-async = "1.0"
embedded-io-async ={ version = "0.6", default-features = false }
embedded-hal = "1.0"
embedded-hal-bus = "0.3"
#embedded-can        = "0.4.1"
#embedded-graphics   = "0.8.1"
#embedded-io         = { version = "0.6.1", default-features = false }
#embedded-io-async   = "0.6.1"
#embedded-storage    = "0.3.1"

esp-alloc = {  version = "0.6.0" }
esp-backtrace = { version = "0.15", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23", features = ["log" ] }
esp-hal-embassy = { version = "0.6.0", features = []} # "integrated-timers"
esp-println = { version = "0.13", features = ["log"] }
esp-storage = { version = "0.4.0", features = [] }
esp-wifi = { version = "0.12", features = ["log", "esp-alloc"] }

fugit = "0.3"
heapless = "0.8"
log = "0.4"
static_cell = "2.1"
usb-device = "0.3"
usbd-serial = "0.2"

byteorder ={ version = "1.5", default-features = false }

# Sensor Drivers
ublox = { version = "0.4", default-features = false}
UBLOX_rs = { path ="../libs/UBLOX-rs" }
chrono = { version = "0.4", default-features = false}
chrono-tz = { version = "0.10", default-features = false}

# Lora Drivers
lora-modulation = "0.1"
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git"}
dummy-pin = "1.0"
postcard = "1.0"

Mesh = { path = "../libs/Mesh" }
ssd1306 = "0.9"
embedded-graphics = "0.8"

[features]
default = ["esp32s3"]
esp32 = ["esp-hal/esp32", "esp-hal-embassy/esp32", "esp-println/esp32", "esp-backtrace/esp32", "esp-storage/esp32", "esp-wifi/esp32"]
esp32s3 = ["esp-hal/esp32s3", "esp-hal-embassy/esp32s3", "esp-println/esp32s3", "esp-backtrace/esp32s3", "esp-storage/esp32s3", "esp-wifi/esp32s3"]
rm_ground_station = ["esp32"]

[build-dependencies]
embuild = "0.33"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
#opt-level = 's'
opt-level = 3
overflow-checks = false
