[package]
name = "ground_station_2"
version = "0.1.0"
description = "RocketryATVT TUI Dashboard"
authors = ["gregoryw3 <greg.wainer@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serialport = { version = "*", features = ["serde"]}

Mesh = { path = "../libs/Mesh" }
postcard = "1.1.1"
csv = "1.3.1"
serde = "1.0.219"
chrono = "0.4.40"
tracing = { version="0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
