[package]
name = "pico_test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "0.3.10" }
defmt-rtt = "0.4"
rtt-target = "0.6"
panic-rtt-target = "0.2"
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3.0", features = ["defmt", "rp2040", "critical-section-impl", "time-driver", "intrinsics", "rom-v2-intrinsics"]}
embassy-usb = { version = "0.4.0", features = ["defmt"]}
embassy-usb-logger = { version = "0.4.0" }
log ={ version = "0.4" }
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = { version = "1.2" }
rp2040-hal ={ version = "0.11"}
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = { version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"]}
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }

lora-modulation = {version = "0.1.5"}
lora-phy = { version = "3.0" }

mavlink = { version = "0.13", features = ["common", "embedded"], default-features = false}

static_cell = { version = "2.0.0" }
portable-atomic = { version = "1.5", features = ["critical-section"] }

ism330dhcx = { version = "0.6.0", path = "./libs/ISM330DHCX/" }
LSM6DSO32 = { version = "0.0.1", path = "./libs/LSM6DSO32/" }
ADXL375 = { version = "0.0.1", path = "./libs/ADXL375/" }
bmp390 = { version = "0.4" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
