[package]
name = "pico_test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "1.0" }
defmt-rtt = "1.0"
rtt-target = "0.6"
panic-rtt-target = "0.2"
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4", features = ["defmt", "rp2040", "critical-section-impl", "time-driver", "intrinsics", "rom-v2-intrinsics"]}
embassy-usb = { version = "0.4", features = ["defmt"]}
embassy-usb-logger = { version = "0.4" }
embedded-sdmmc = { version = "0.8" }
log ={ version = "0.4" }
cyw43 = { version = "0.3", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.4", features = ["defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = { version = "1.2" }
rp2040-hal ={ version = "0.11"}
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = { version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"]}
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }

static_cell = { version = "2.1" }
portable-atomic = { version = "1.11", features = ["critical-section"] }
chrono = { version = "0.4", default-features = false}
chrono-tz = { version = "0.10", default-features = false}
hifitime = { version = "4.0", default-features = false}
byteorder ={ version = "1.5", default-features = false }
postcard = { version = "1.1", features = ["defmt"] }
serde = { version = "1.0", features = ["derive"], default-features = false}
heapless = { version = "0.7"}
num-traits = { version = "0.2", default-features = false}
nalgebra = { version = "0.33", features = ["serde-serialize-no-std"], default-features = false}
embedded-io = "0.6"
futures = { version = "0.3", default-features = false}


UBLOX_rs = { path = "../libs/UBLOX-rs" }
Mesh = { path = "../libs/Mesh" }
ublox = { version = "0.5", default-features = false, features = ["serde", "ubx_proto23"] }
ism330dhcx = { version = "0.6.0", path = "../libs/ISM330DHCX/" }
LSM6DSO32 = { version = "0.0.1", path = "../libs/LSM6DSO32/" }
ADXL375 = { version = "0.0.1", path = "../libs/ADXL375/" }
bmp390 = { version = "0.4" }
controls = { path = "../libs/Controls" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
