[package]
name = "controls"
version = "0.1.0"
edition = "2021"

[dependencies]
ahrs = { version = "0.7", default-features = false }
# faer = { version = "0.21", default-features = false}
nalgebra = { version = "0.33", default-features = false, features = ["libm"]}
num-traits = { version = "*", default-features = false }