[package]
name = "Mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
modular-bitfield = { version = "0.11" }
bitfields = "0.12"
postcard = { version = "1.1", features = ["defmt"] }
serde = { version = "1.0", features = ["derive"], default-features = false}
ublox = { version = "0.5", default-features = false, features = ["ubx_proto23"] }
heapless = { version = "0.8", features = ["serde"]}
# serde-reflection = { version = "0.5" }
# serde-generate = "0.30.0"
# serde_yaml = "0.9.34"

[[bin]]
name = "generate_registry"
